agregando test correspondientes a los modulos y su respectiva documentacion

--- a/src/custom/hr_performance_review/hr_performance_review/views/hr_performance_review_views.xml
+++ b/src/custom/hr_performance_review/hr_performance_review/views/hr_performance_review_views.xml
@@ -52,7 +52,7 @@
                                     </div>
                                     <div class="oe_kanban_bottom_right">
                                         <span class="badge rounded-pill text-bg-info">
-                                            <i class="fa fa-star"/> <field name="score"/>
+                                            <i class="fa fa-star" title="Calificación"/> <field name="score"/>
                                         </span>
                                     </div>
                                 </div>
